{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 85,
  "lineage": "b2cfcc26-d0e5-81dd-0746-5574e49f307a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc96b9c7714fad67",
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:elastic-ip/eipalloc-0cc96b9c7714fad67",
            "association_id": "eipassoc-0661f241ee06012c8",
            "domain": "vpc",
            "id": "eipalloc-0cc96b9c7714fad67",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0509107d3358304f6",
            "private_dns": "ip-10-0-1-238.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-3-36-147-15.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.147.15",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-nat-eip"
            },
            "tags_all": {
              "Name": "cloudflix-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:internet-gateway/igw-0f7a0e09fd0a6b82d",
            "id": "igw-0f7a0e09fd0a6b82d",
            "owner_id": "897729138689",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-igw"
            },
            "tags_all": {
              "Name": "cloudflix-igw"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc96b9c7714fad67",
            "association_id": "eipassoc-0661f241ee06012c8",
            "connectivity_type": "public",
            "id": "nat-022f7b18b8f0850a7",
            "network_interface_id": "eni-0509107d3358304f6",
            "private_ip": "10.0.1.238",
            "public_ip": "3.36.147.15",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ec178d23d9cc4e1",
            "tags": {
              "Name": "cloudflix-nat"
            },
            "tags_all": {
              "Name": "cloudflix-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:route-table/rtb-08e88b46818284e4f",
            "id": "rtb-08e88b46818284e4f",
            "owner_id": "897729138689",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022f7b18b8f0850a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudflix-private-rt-private-0"
            },
            "tags_all": {
              "Name": "cloudflix-private-rt-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:route-table/rtb-07133d4812b1814df",
            "id": "rtb-07133d4812b1814df",
            "owner_id": "897729138689",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022f7b18b8f0850a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudflix-private-rt-private-1"
            },
            "tags_all": {
              "Name": "cloudflix-private-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:route-table/rtb-06b113d0183eafd37",
            "id": "rtb-06b113d0183eafd37",
            "owner_id": "897729138689",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022f7b18b8f0850a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudflix-private-rt-private-2"
            },
            "tags_all": {
              "Name": "cloudflix-private-rt-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:route-table/rtb-04ac7bf5614ddbce0",
            "id": "rtb-04ac7bf5614ddbce0",
            "owner_id": "897729138689",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7a0e09fd0a6b82d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudflix-public-rt"
            },
            "tags_all": {
              "Name": "cloudflix-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d15eee9b52f52ff8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08e88b46818284e4f",
            "subnet_id": "subnet-0ab935f8f74356943"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd82d64b12e23f9c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07133d4812b1814df",
            "subnet_id": "subnet-0ca62218a7a04ee02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7a5840b90c6ccb",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-06b113d0183eafd37",
            "subnet_id": "subnet-0fa9d97b2f3a8254e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f61e104bf24cc56",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04ac7bf5614ddbce0",
            "subnet_id": "subnet-00ec178d23d9cc4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0497089c6491d9bf7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04ac7bf5614ddbce0",
            "subnet_id": "subnet-024af90a97a621787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7761ce868d5738f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04ac7bf5614ddbce0",
            "subnet_id": "subnet-073e051ad8da2d6ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:subnet/subnet-0ab935f8f74356943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab935f8f74356943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897729138689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-private-0"
            },
            "tags_all": {
              "Name": "cloudflix-private-0"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:subnet/subnet-0ca62218a7a04ee02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca62218a7a04ee02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897729138689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-private-1"
            },
            "tags_all": {
              "Name": "cloudflix-private-1"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:subnet/subnet-0fa9d97b2f3a8254e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa9d97b2f3a8254e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897729138689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-private-2"
            },
            "tags_all": {
              "Name": "cloudflix-private-2"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:subnet/subnet-00ec178d23d9cc4e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec178d23d9cc4e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729138689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-public-0"
            },
            "tags_all": {
              "Name": "cloudflix-public-0"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:subnet/subnet-024af90a97a621787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024af90a97a621787",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729138689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-public-1"
            },
            "tags_all": {
              "Name": "cloudflix-public-1"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:subnet/subnet-073e051ad8da2d6ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073e051ad8da2d6ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729138689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-public-2"
            },
            "tags_all": {
              "Name": "cloudflix-public-2"
            },
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:vpc/vpc-0bf026d1edebf3349",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6aa2f850cc77617",
            "default_route_table_id": "rtb-0f253ea157b27c14b",
            "default_security_group_id": "sg-0d186fea93219ad7e",
            "dhcp_options_id": "dopt-023c95d6ba9a8ceeb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf026d1edebf3349",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f253ea157b27c14b",
            "owner_id": "897729138689",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "cloudflix-vpc",
              "Type": "Main"
            },
            "tags_all": {
              "Name": "cloudflix-vpc",
              "Type": "Main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:897729138689:vpc-endpoint/vpce-00ac6f4d430fcad7f",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-00ac6f4d430fcad7f",
            "owner_id": "897729138689",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06b113d0183eafd37",
              "rtb-07133d4812b1814df",
              "rtb-08e88b46818284e4f"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "cloudflix-s3-endpoint"
            },
            "tags_all": {
              "Name": "cloudflix-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bf026d1edebf3349"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}